新增mysql workerid分配器实现